--- a/docs/07.Microservice/93.Kubernetes/01.Kubernetes的基本情况介绍.md
+++ b/docs/07.Microservice/93.Kubernetes/01.Kubernetes的基本情况介绍.md
@@ -2,16 +2,80 @@
 title: Kubernetes的基本情况介绍
 date: 2021-06-29 15:49:35
 permalink: /pages/1208bb/
+sticky: 1
 categories:
   - Microservice
   - Kubernetes
 tags:
-  - 
+  - Kubernetes
 author:
     name: chrisyuqin
     link: https://github.com/chrisyuqin
 ---
-## kubernetes 的历史
 
-## kubernetes 的发展
 
+# Kubernetes的基本情况介绍
+<p align="center">
+  <img src="/img/k8s.png">
+</p>
+Kubernetes是一个开源的，用于管理云平台中多个主机上的容器化的应用，Kubernetes的目标是让部署容器化的应用简单并且高效（powerful）,Kubernetes提供了应用部署，规划，更新，维护的一种机制。
+
+<!-- more -->
+
+## kubernetes 是什么?
+### kubernetes 名字来源
+Kubernetes的名字来自希腊语，意思是“舵手” 或 “领航员”。K8s是将8个字母“ubernete”替换为“8”的缩写
+
+### Kubernetes 参考网址
++ [http://docs.kubernetes.org.cn/227.html](http://docs.kubernetes.org.cn/227.html)
++ [https://www.kubernetes.org.cn/k8s](https://www.kubernetes.org.cn/k8s)
+
+### kubernetes 定义
++ Kubernetes是容器集群管理系统，是一个开源的平台，可以实现容器集群的自动化部署、自动扩缩容、维护等功能。
+
+### Kubernetes 特点
++ <b>可移植</b>: 支持公有云，私有云，混合云，多重云（multi-cloud）
++ <b>可扩展</b>: 模块化, 插件化, 可挂载, 可组合
++ <b>自动化</b>: 自动部署，自动重启，自动复制，自动伸缩/扩展
+
+## 通过Kubernetes你可以做什么
+### 总体适配应用场景
++ 快速部署应用场景
++ 快速扩展应用场景
+
+> (我们的目标是促进完善组件和工具的生态系统，以减轻应用程序在公有云或私有云中运行的负担)
+
+### 应用实施细节
+> 可以在物理或虚拟机的Kubernetes集群上运行容器化应用，Kubernetes能提供一个以“容器为中心的基础架构”，满足在生产环境中运行应用的一些常见需求，如：
++ 多个进程（作为容器运行）协同工作。（Pod）
++ 存储系统挂载
++ Distributing secrets
++ 应用健康检测
++ 应用实例的复制
++ Pod自动伸缩/扩展
++ Naming and discovering
++ 负载均衡
++ 滚动更新
++ 资源监控
++ 日志访问
++ 调试应用程序
++ 提供认证和授权
+
+## Kubernetes 不是什么？
+
+
+### Kubernetes并不是传统的PaaS（平台即服务）系统。
+
+> + Kubernetes不限制支持应用的类型，不限制应用框架。不限制受支持的语言runtimes (例如, Java, Python, Ruby)，满足12-factor applications 。不区分 “apps” 或者“services”。 Kubernetes支持不同负载应用，包括有状态、无状态、数据处理类型的应用。只要这个应用可以在容器里运行，那么就能很好的运行在Kubernetes上。
+> + Kubernetes不提供中间件（如message buses）、数据处理框架（如Spark）、数据库(如Mysql)或者集群存储系统(如Ceph)作为内置服务。但这些应用都可以运行在Kubernetes上面。
+> + Kubernetes不部署源码不编译应用。持续集成的 (CI)工作流方面，不同的用户有不同的需求和偏好的区域，因此，我们提供分层的 CI工作流，但并不定义它应该如何工作。
+> + Kubernetes允许用户选择自己的日志、监控和报警系统。
+> + Kubernetes不提供或授权一个全面的应用程序配置 语言/系统（例如，jsonnet）。
+> + Kubernetes不提供任何机器配置、维护、管理或者自修复系统。
+
+### 大量的Paas系统都可以运行在Kubernetes上。
+> 另一方面，大量的Paas系统都可以运行在Kubernetes上，比如Openshift、Deis、Gondor。可以构建自己的Paas平台，与自己选择的CI系统集成。
+> 由于Kubernetes运行在应用级别而不是硬件级，因此提供了普通的Paas平台提供的一些通用功能，比如部署，扩展，负载均衡，日志，监控等。这些默认功能是可选的。
+
+> 另外，Kubernetes不仅仅是一个“编排系统”；它消除了编排的需要。“编排”的定义是指执行一个预定的工作流：先执行A，之B，然C。相反，Kubernetes由一组独立的
+> 可组合控制进程组成。怎么样从A到C并不重要，达到目的就好。当然集中控制也是必不可少，方法更像排舞的过程。这使得系统更加易用、强大、弹性和可扩展
